--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,15 @@
-name: Run Tests
+name: Java CI with Gradle
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -13,10 +19,8 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: '17'
+          distribution: ' AdoptOpenJDK'   # Aquí se especifica la distribución de Java.
+          java-version: '17'  # La versión de Java que quieres usar, por ejemplo 11.
 
-      - name: Build with Maven
-        run: mvn clean install
-
-      - name: Run tests
-        run: mvn test
+      - name: Build with Gradle
+        run: ./gradlew build
