--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Java CI with Maven
+name: Java CI
 
 on:
   push:
@@ -14,13 +14,17 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          distribution: 'adoptopenjdk'  # Aquí especificas la distribución de Java
-          java-version: '11'           # La versión de Java que usas, por ejemplo, 11.
+          distribution: 'amazon-corretto'
+          java-version: '17'
+          cache: maven
 
       - name: Build with Maven
-        run: mvn clean install   # Comando para construir el proyecto con Maven
+        run: mvn clean install
+
+      - name: run test
+        run: mvn test
