--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,15 +1,9 @@
-name: Java CI
+name: Run Tests
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+on: [push]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,12 +13,11 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'amazon-corretto'
+          distribution: "amazon-corretto"
           java-version: '17'
-          cache: maven
 
       - name: Build with Maven
         run: mvn clean install
 
-      - name: run test
+      - name: Run tests
         run: mvn test
