--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,9 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: "amazon-corretto"
+          distribution: "corretto"
           java-version: '17'
+          cache: maven
 
       - name: Build with Maven
         run: mvn clean install
