--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,12 @@
 name: Run Tests
 
-on: [push]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   test:
@@ -21,4 +27,4 @@ jobs:
         run: mvn clean install
 
       - name: Run tests
-        run: mvn test
+        run: mvn test -Dspring.profiles.active=test
